<resources>

    <string name="app_name">MyUiDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_number_edit">TestNumberEditActivity</string>
    <string name="edittext_input">请输入相应的密码</string>
    <string name="activity_main_showtext_btn">显示弹出框</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="words_sciener"                 >sciener</string>

    <string name="words_login"                   >login</string>
    <string name="words_register"                >register</string>
    <string name="words_title"                   >phone register</string>


    <string name="words_sicener_version"           >Ver 4.0 For Android</string>
    <string name="words_taste"                     >StartExperience</string>
    <string name="title_activity_login_detail">LoginDetailActivity</string>
    <string name="words_phonenumber"             >phone number</string>

    <string name="words_foget_password"          >forget password?</string>
    <string name="words_register_account"        >register right away</string>
    <string name="words_password_detail_info"    >password must 6-20 number and words</string>
    <string name="words_email_register">register for email</string>

</resources>
