
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="customui.example.com.myuidemo.LoginActivity"
    android:background="@android:color/white"
    android:padding="@dimen/layout_padding_42dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="10">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_login_80dp"
            android:background="@mipmap/logo"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/words_sciener"
            android:textSize="@dimen/tx_16sp"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="@dimen/activity_login_10dp"
            />


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/words_sicener_version"
            android:textSize="@dimen/tx_16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="@dimen/activity_login_12dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_weight="1">

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/words_login"
            android:textSize="@dimen/tx_22sp"
            android:textColor="@android:color/holo_blue_light"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/words_register"
            android:textSize="@dimen/tx_22sp"
            android:textColor="@android:color/holo_blue_light"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>
